--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
+  "next": "16.1.3",
+  "react": "19.2.3",
+  "react-dom": "19.2.3",
+  "@sendgrid/mail": "^8.1.0"
+}
   "devDependencies": {
     "eslint": "^9",
     "eslint-config-next": "16.1.3"
